--- a/My-Recipes-Book/My-Recipes-Book/Info.plist
+++ b/My-Recipes-Book/My-Recipes-Book/Info.plist
@@ -5,6 +5,8 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
