--- a/My-Recipes-Book/My-Recipes-Book/SupportingFiles/GoogleService-Info.plist
+++ b/My-Recipes-Book/My-Recipes-Book/SupportingFiles/GoogleService-Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>API_KEY</key>
-	<string>AIzaSyAgwCl6EN35FKmFUog1icP21TOqQ4QAnD8</string>
 	<key>GCM_SENDER_ID</key>
 	<string>1025068878804</string>
 	<key>PLIST_VERSION</key>
@@ -15,15 +13,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>my-recipes-book-b32ef.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1025068878804:ios:7c945c54ec056c29af2441</string>
 </dict>
